# usethis

./: NAMESPACE
R/: autoconf.R
inst/templates/: Makevars.in  autoconf-pre-commit.sh  configure.ac
man/: use_autoconf.Rd
tests/testthat/: test-use-autoconf.R
